--- a/.gitignore
+++ b/.gitignore
@@ -9,30 +9,16 @@
 **/.settings/org.eclipse.jdt.core.prefs
 **/.settings/org.eclipse.m2e.core.prefs
 **/.settings/org.jboss.tools.maven.apt.prefs
-
 /orko-api/dependency-reduced-pom.xml
 /orko-web/dependency-reduced-pom.xml
 /orko-worker/dependency-reduced-pom.xml
 /target/orko-parent-0.0.1-SNAPSHOT-shaded.pom
-
-
 /orko-all-in-one/my-config.yml
 /target/
 /orko-common/.settings/org.jboss.tools.maven.apt.prefs
 /orko-ui/.settings
 /orko-ui/node
 /orko-all-in-one/src/main/resources/assets
-/orko-all-in-one/ipwl.db
-/orko-all-in-one/ipwl.db.wal.0
-/orko-all-in-one/jobs.db
-/orko-all-in-one/jobs.db.wal.0
-/orko-all-in-one/subscriptions.db
-/orko-all-in-one/subscriptions.db.wal.0
-/ipwl.db
-/ipwl.db.wal.0
-/jobs.db
-/jobs.db.wal.0
-/subscriptions.db
 /orko-all-in-one/.checkstyle
 /orko-all-in-one/.fbExcludeFilterFile
 /orko-all-in-one/.settings/edu.umd.cs.findbugs.core.prefs
@@ -45,3 +31,5 @@
 /orko-worker/.checkstyle
 /orko-worker/.fbExcludeFilterFile
 /orko-worker/.settings/edu.umd.cs.findbugs.core.prefs
+/orko-all-in-one/orko.mv.db
+/orko-all-in-one/orko.trace.db
