--- a/orko-all-in-one/example-config.yml
+++ b/orko-all-in-one/example-config.yml
@@ -16,7 +16,7 @@ auth:
 #    issuer: THE
 #    clientId: README
 database:
-  connectionString: h2:file:./orko
+  connectionString: h2:file:./orko;DB_CLOSE_DELAY=-1;MVCC=TRUE;DEFAULT_LOCK_TIMEOUT=60000
 # telegram:
 #   botToken: YOU
 #   chatId: REALLYWANTTHIS
