--- a/orko-all-in-one/heroku-config.yml
+++ b/orko-all-in-one/heroku-config.yml
@@ -19,7 +19,7 @@ telegram:
   botToken: ${TELEGRAM_BOT_TOKEN:-}
   chatId: ${TELEGRAM_CHAT_ID:-}
 database:
-  connectionString: ${JAWSDB_MARIA_URL}
+  connectionString: ${JAWSDB_MARIA_URL}?rewriteBatchedStatements=true&useJDBCCompliantTimezoneShift=true
   lockSeconds: ${LOCK_SECONDS:-45}
 exchanges:
   gdax-sandbox:
