Change app.json to use JawsDB Maria

--- a/app.json
+++ b/app.json
@@ -54,7 +54,7 @@
       "quantity": 1
     }
   },
-  "addons": ["mongolab", "papertrail"],
+  "addons": ["jawsdb-maria", "papertrail"],
   "buildpacks": [
     {
       "url": "heroku/java"
