Default example config for local running shouldn't use HTTPS/proxy settings

--- a/orko-all-in-one/example-config.yml
+++ b/orko-all-in-one/example-config.yml
@@ -1,7 +1,7 @@
 loopSeconds: 3
 auth:
-  httpsOnly: true
-  proxied: true
+  httpsOnly: false
+  proxied: false
 #  ipWhitelisting:
 #    whitelistExpirySeconds: 86400
 #    secretKey: YOURTOKEN
