--- a/orko-common/pom.xml
+++ b/orko-common/pom.xml
@@ -14,8 +14,7 @@
   <parent>
     <groupId>com.grahamcrockford</groupId>
     <artifactId>orko-parent</artifactId>
-    <version>0.3.2-SNAPSHOT
-</version>
+    <version>0.3.2</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
