--- a/pom.xml
+++ b/pom.xml
@@ -172,16 +172,21 @@
     <dropwizard.version>1.3.7</dropwizard.version>
 
     <xchange.version>4.3.11</xchange.version>
-    <xchange.stream.version>4.3.11.orko.3</xchange.stream.version>
+    
+    <!--<xchange.stream.groupid>info.bitrich.xchange-stream</xchange.stream.groupid>-->
+    <xchange.stream.groupid>com.github.badgerwithagun.xchange-stream</xchange.stream.groupid>
+    <xchange.stream.version>4.3.11.orko.4</xchange.stream.version>
 
     <streamex.version>0.6.7</streamex.version>
     <guice.version>4.2.2</guice.version>
     <guava.version>27.0-jre</guava.version>
     <autovalue.version>1.6.2</autovalue.version>
     <rabbitmq.version>5.4.3</rabbitmq.version>
-    <morf.version>0.1.3.badgerwithagun.2</morf.version>
     <j00q.version>3.11.7</j00q.version>
     <mysql.connector.version>8.0.13</mysql.connector.version>
+    
+    <morf.groupid>com.github.badgerwithagun.morf</morf.groupid>
+    <morf.version>0.1.3.badgerwithagun.2</morf.version>
 
     <reflections.version>0.9.11</reflections.version>
     <googleauth.version>1.1.5</googleauth.version>
@@ -285,23 +290,23 @@
           <version>${mysql.connector.version}</version>
       </dependency>
       <dependency>
-        <groupId>com.github.badgerwithagun.morf</groupId>
+        <groupId>${morf.groupid}</groupId>
         <artifactId>morf-core</artifactId>
         <version>${morf.version}</version>
       </dependency>
       <dependency>
-        <groupId>com.github.badgerwithagun.morf</groupId>
+        <groupId>${morf.groupid}</groupId>
         <artifactId>morf-testsupport</artifactId>
         <version>${morf.version}</version>
         <scope>test</scope>
       </dependency>
       <dependency>
-        <groupId>com.github.badgerwithagun.morf</groupId>
+        <groupId>${morf.groupid}</groupId>
         <artifactId>morf-h2</artifactId>
         <version>${morf.version}</version>
       </dependency>
       <dependency>
-        <groupId>com.github.badgerwithagun.morf</groupId>
+        <groupId>${morf.groupid}</groupId>
         <artifactId>morf-mysql</artifactId>
         <version>${morf.version}</version>
       </dependency>
@@ -389,22 +394,22 @@
       </dependency>
 
       <dependency>
-        <groupId>com.github.badgerwithagun.xchange-stream</groupId>
+        <groupId>${xchange.stream.groupid}</groupId>
         <artifactId>xchange-stream-core</artifactId>
         <version>${xchange.stream.version}</version>
       </dependency>
       <dependency>
-        <groupId>com.github.badgerwithagun.xchange-stream</groupId>
+        <groupId>${xchange.stream.groupid}</groupId>
         <artifactId>xchange-binance</artifactId>
         <version>${xchange.stream.version}</version>
       </dependency>
       <dependency>
-        <groupId>com.github.badgerwithagun.xchange-stream</groupId>
+        <groupId>${xchange.stream.groupid}</groupId>
         <artifactId>xchange-bitfinex</artifactId>
         <version>${xchange.stream.version}</version>
       </dependency>
       <dependency>
-        <groupId>com.github.badgerwithagun.xchange-stream</groupId>
+        <groupId>${xchange.stream.groupid}</groupId>
         <artifactId>xchange-gdax</artifactId>
         <version>${xchange.stream.version}</version>
       </dependency>
