--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,27 +2,27 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/openjdk:8-jdk
+      - image: circleci/openjdk:8-jdk-browsers
         environment:
-         MAVEN_OPTS: -Xmx3200m
+          MAVEN_OPTS: -Xmx3200m
     steps:
       - checkout
       - restore_cache:
           keys:
-            - v1-dependencies-{{ checksum "pom.xml" }}
-            - v1-dependencies-
-      - run: mvn -Pproduction clean package -T 1C -DskipSlowTests=true
+            - orko-build-{{ checksum "pom.xml" }}
+      - run: mvn de.qaware.maven:go-offline-maven-plugin:1.0.0:resolve-dependencies -Dmaven.repo.local=.m2/repository
       - save_cache:
           paths:
             - ~/.m2
-          key: v1-dependencies-{{ checksum "pom.xml" }}
+          key: orko-build-{{ checksum "pom.xml" }}
+      - run: mvn -Pproduction clean package -T 1C -DskipSlowTests=true
       - store_artifacts:
           path: /home/circleci/repo/orko-common/target/surefire-reports
   mysql:
     docker:
       - image: circleci/openjdk:8-jdk
         environment:
-         MAVEN_OPTS: -Xmx3200m
+          MAVEN_OPTS: -Xmx3200m
       - image: circleci/mysql:5.7
         environment:
           MYSQL_ROOT_PASSWORD: rootpw
@@ -33,8 +33,12 @@ jobs:
       - checkout
       - restore_cache:
           keys:
-            - v1-dependencies-{{ checksum "pom.xml" }}
-            - v1-dependencies-
+            - orko-build-{{ checksum "pom.xml" }}
+      - run: mvn de.qaware.maven:go-offline-maven-plugin:1.0.0:resolve-dependencies -Dmaven.repo.local=.m2/repository
+      - save_cache:
+          paths:
+            - ~/.m2
+          key: orko-build-{{ checksum "pom.xml" }}
       - run:
           name: Waiting for MySQL to be ready
           command: |
@@ -46,12 +50,8 @@ jobs:
             done
             echo Failed waiting for MySQL && exit 1
       - run: mvn -Pwebdev clean package -T 1C -DskipSlowTests=true -Dtestdb.url=mysql://open:sesame@127.0.0.1/test
-      - save_cache:
-          paths:
-            - ~/.m2
-          key: v1-dependencies-{{ checksum "pom.xml" }}
-      - store_artifacts:
-          path: /home/circleci/repo/orko-common/target/surefire-reports
+      - store_test_results:
+          path: target/surefire-reports
 workflows:
   version: 2
   all:
