--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,15 @@
         <module>orko-common</module>
         <module>orko-all-in-one</module>
       </modules>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>de.qaware.maven</groupId>
+            <artifactId>go-offline-maven-plugin</artifactId>
+            <version>1.0.0</version>
+          </plugin>
+        </plugins>
+      </build>
     </profile>
     <profile>
       <id>production</id>
@@ -172,8 +181,8 @@
     <dropwizard.version>1.3.7</dropwizard.version>
 
     <xchange.version>4.3.11</xchange.version>
-    
-    <!--<xchange.stream.groupid>info.bitrich.xchange-stream</xchange.stream.groupid>-->
+
+    <!--<xchange.stream.groupid>info.bitrich.xchange-stream</xchange.stream.groupid> -->
     <xchange.stream.groupid>com.github.badgerwithagun.xchange-stream</xchange.stream.groupid>
     <xchange.stream.version>4.3.11.orko.4</xchange.stream.version>
 
@@ -184,7 +193,7 @@
     <rabbitmq.version>5.4.3</rabbitmq.version>
     <j00q.version>3.11.7</j00q.version>
     <mysql.connector.version>8.0.13</mysql.connector.version>
-    
+
     <morf.groupid>com.github.badgerwithagun.morf</morf.groupid>
     <morf.version>0.1.3.badgerwithagun.2</morf.version>
 
@@ -285,9 +294,9 @@
       </dependency>
 
       <dependency>
-          <groupId>mysql</groupId>
-          <artifactId>mysql-connector-java</artifactId>
-          <version>${mysql.connector.version}</version>
+        <groupId>mysql</groupId>
+        <artifactId>mysql-connector-java</artifactId>
+        <version>${mysql.connector.version}</version>
       </dependency>
       <dependency>
         <groupId>${morf.groupid}</groupId>
