--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,8 +3,8 @@ jobs:
   build:
     docker:
       - image: circleci/openjdk:8-jdk-browsers
-        environment:
-          MAVEN_OPTS: -Xmx3200m
+          environment:
+            MAVEN_OPTS: -Xmx3200m
     steps:
       - checkout
       - restore_cache:
@@ -16,8 +16,16 @@ jobs:
             - ~/.m2
           key: orko-build-{{ checksum "pom.xml" }}
       - run: mvn -Pproduction clean package -T 1C -DskipSlowTests=true
+      - run:
+          name: Save test results
+          command: |
+            mkdir -p ~/junit/
+            find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} ~/junit/ \;
+          when: always
+      - store_test_results:
+          path: ~/junit
       - store_artifacts:
-          path: /home/circleci/repo/orko-common/target/surefire-reports
+          path: ~/junit  
   mysql:
     docker:
       - image: circleci/openjdk:8-jdk
@@ -50,8 +58,16 @@ jobs:
             done
             echo Failed waiting for MySQL && exit 1
       - run: mvn -Pwebdev clean package -T 1C -DskipSlowTests=true -Dtestdb.url=mysql://open:sesame@127.0.0.1/test
+      - run:
+          name: Save test results
+          command: |
+            mkdir -p ~/junit/
+            find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} ~/junit/ \;
+          when: always
       - store_test_results:
-          path: target/surefire-reports
+          path: ~/junit
+      - store_artifacts:
+          path: ~/junit  
 workflows:
   version: 2
   all:
