--- a/pom.xml
+++ b/pom.xml
@@ -56,10 +56,14 @@
     <repository>
       <id>jitpack.io</id>
       <url>https://jitpack.io</url>
-      <!-- <snapshots> -->
-      <!-- <enabled>true</enabled> -->
-      <!-- <updatePolicy>always</updatePolicy> -->
-      <!-- </snapshots> -->
+      <releases>
+        <enabled>true</enabled>
+        <updatePolicy>never</updatePolicy>
+        <checksumPolicy>warn</checksumPolicy>
+      </releases>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
     </repository>
   </repositories>
 
