--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
             - node-v1-{{ .Branch }}-{{ checksum "orko-ui/package-lock.json" }}
             - node-v1-{{ .Branch }}-
             - node-v1-
-      - run: mvn -Pproduction clean package -DskipTests=true
+      - run: mvn -Pproduction clean install -DskipTests=true
       - save_cache:
           paths:
             - ~/.m2
