--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,15 +12,15 @@ jobs:
       - checkout
       - restore_cache:
           keys:
-            - maven-repo-v1-{{ .Branch }}-{{ checksum "pom.xml" }}
-            - maven-repo-v1-{{ .Branch }}-
-            - maven-repo-v1-
+            - maven-repo-v2-{{ .Branch }}-{{ checksum "pom.xml" }}
+            - maven-repo-v2-{{ .Branch }}-
+            - maven-repo-v2-
       - restore_cache:
           keys:
-            - node-v1-{{ .Branch }}-{{ checksum "orko-ui/package-lock.json" }}
-            - node-v1-{{ .Branch }}-
-            - node-v1-
-      - run: mvn -Pproduction clean install -DskipTests=true
+            - node-v2-{{ .Branch }}-{{ checksum "orko-ui/package-lock.json" }}
+            - node-v2-{{ .Branch }}-
+            - node-v2-
+      - run: mvn -Pproduction clean install
       - save_cache:
           paths:
             - ~/.m2
@@ -29,63 +29,20 @@ jobs:
           paths:
             - /usr/local/lib/node_modules
             - orko-ui/node_modules
-          key: node-v1-{{ .Branch }}-{{ checksum "orko-ui/package-lock.json" }}
-      - persist_to_workspace:
-          root: ~/orko
-          paths:
-            - etc
-            - pom.xml
-            - orko-all-in-one
-            - orko-common
-            - orko-end-to-end-testing
-            - orko-web
-            - orko-worker
-  h2-backend-tests:
-    docker:
-      - image: circleci/openjdk:8-jdk
-        environment:
-          MAVEN_OPTS: -Xmx3200m
-    working_directory: ~/orko
-    steps:
-      - attach_workspace:
-          at: .
-      - restore_cache:
-          keys:
-            - maven-repo-v1-{{ .Branch }}-{{ checksum "pom.xml" }}
-            - maven-repo-v1-{{ .Branch }}-
-            - maven-repo-v1-
-      - run: mvn -Pwebdev surefire:test -DskipSlowTests=true
+          key: node-v2-{{ .Branch }}-{{ checksum "orko-ui/package-lock.json" }}
       - run:
-          name: Save test results
+          name: Saving checkstyle reports
+          command: |
+            mkdir -p ~/checkstyle/
+            find . -type f -regex ".*/target/checkstyle-result.xml" -exec cp {} ~/checkstyle \;
+          when: always
+      - run:
+          name: Saving test results (H2)
           command: |
             mkdir -p ~/junit/
             find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} ~/junit/h2 \;
           when: always
-      - store_test_results:
-          path: ~/junit/h2
-      - store_artifacts:
-          path: ~/junit/h2
-  mysql-backend-tests:
-    docker:
-      - image: circleci/openjdk:8-jdk
-        environment:
-          MAVEN_OPTS: -Xmx3200m
-      - image: circleci/mysql:5.7
-        environment:
-          MYSQL_ROOT_PASSWORD: rootpw
-          MYSQL_DATABASE: test
-          MYSQL_USER: open
-          MYSQL_PASSWORD: sesame
-    working_directory: ~/orko
-    steps:
-      - attach_workspace:
-          at: .
-      - restore_cache:
-          keys:
-            - maven-repo-v1-{{ .Branch }}-{{ checksum "pom.xml" }}
-            - maven-repo-v1-{{ .Branch }}-
-            - maven-repo-v1-
-      - run:
+     - run:
           name: Waiting for MySQL to be ready
           command: |
             for i in `seq 1 30`;
@@ -97,23 +54,18 @@ jobs:
             echo Failed waiting for MySQL && exit 1
       - run: mvn -Pwebdev surefire:test -DskipSlowTests=true -Dtestdb.url=mysql://open:sesame@127.0.0.1/test
       - run:
-          name: Save test results
+          name: Save test results (MySQL)
           command: |
             mkdir -p ~/junit/
             find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} ~/junit/mysql \;
           when: always
-      - store_test_results:
-          path: ~/junit/mysql
       - store_artifacts:
-          path: ~/junit/mysql
+          path: ~/checkstyle
+          path: ~/junit
+      - store_test_results:
+          path: ~/junit
 workflows:
   version: 2
   all:
     jobs:
       - build
-      - h2-backend-tests:
-          requires:
-            - build
-      - mysql-backend-tests:
-          requires:
-            - build
