--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,7 +42,7 @@ jobs:
             mkdir -p ~/junit/
             find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} ~/junit/h2 \;
           when: always
-     - run:
+      - run:
           name: Waiting for MySQL to be ready
           command: |
             for i in `seq 1 30`;
@@ -64,8 +64,31 @@ jobs:
           path: ~/junit
       - store_test_results:
           path: ~/junit
+  integration-test:
+    docker:
+      - image: cypress/base:8
+        environment:
+          TERM: xterm
+    working_directory: ~/app
+    steps:
+      - attach_workspace:
+          at: .
+      - restore_cache:
+          keys:
+            - v1-cypress-{{ .Branch }}-{{ checksum "orko-end-to-end-testing/package.json" }}
+            - v1-cypress-{{ .Branch }}
+            - v1-cypress
+      - cypress/run:
+          start: npm start
+      - save_cache:
+          key: v1-deps-{{ .Branch }}-{{ checksum "orko-end-to-end-testing/package.json" }}
+          paths:
+            - ~/.cache
 workflows:
   version: 2
   all:
     jobs:
       - build
+      - integration-test:
+          requires:
+            - build
