--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,12 @@ jobs:
       - image: circleci/openjdk:8-jdk
         environment:
           MAVEN_OPTS: -Xmx3200m
+      - image: circleci/mysql:5.7
+        environment:
+          MYSQL_ROOT_PASSWORD: rootpw
+          MYSQL_DATABASE: test
+          MYSQL_USER: open
+          MYSQL_PASSWORD: sesame
     working_directory: ~/orko
     steps:
       - checkout
@@ -20,7 +26,7 @@ jobs:
             - node-v2-{{ .Branch }}-{{ checksum "orko-ui/package-lock.json" }}
             - node-v2-{{ .Branch }}-
             - node-v2-
-      - run: mvn -Pproduction clean install
+      - run: mvn -Pproduction clean install -DskipSlowTests=true
       - save_cache:
           paths:
             - ~/.m2
